plugins {
    id 'java'
    id "me.champeau.jmh" version "0.7.3"
}

group 'me.steinborn'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}
apply plugin: 'java'
compileJava {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}
dependencies {
    jmh 'org.openjdk.jmh:jmh-core:1.29'
    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.29'
    implementation "io.netty:netty-buffer:4.1.58.Final"
}

compileJmhJava {
    options.compilerArgs += [
            '--add-modules', 'jdk.incubator.vector'
    ]
}
jmhRunBytecodeGenerator {
    jvmArgs.add('--add-modules=jdk.incubator.vector')
}

processJmhResources {
    duplicatesStrategy(DuplicatesStrategy.WARN)
}

jmh {
    // The full list of configuration options can be found here:
    // https://github.com/melix/jmh-gradle-plugin

    // Uncomment to run specific benchmarks
    // include = ['SampleBenchmark']

    // Uncomment to collect GC metrics
    // profilers = ['gc']
    jvmArgsAppend = [
            '--add-modules=jdk.incubator.vector -XX:CompileCommand=print,me/steinborn/varintshowdown/res/BlendedVarIntWriter.write -XX:CompileCommand=print,me/steinborn/varintshowdown/res/Lucky5VarIntWriter.write -XX:CompileCommand=print,me/steinborn/varintshowdown/res/Lucky5VarIntWriter.v -XX:CompileCommand=print,me/steinborn/varintshowdown/res/Lucky5VarIntWriter.l'
    ]
}
